workspace-sf/force-app/main/default/objects/SeguradoContrato__c/SeguradoContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os segurados do contrato</description>
    <label>Segurado do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segurados do contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>