workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/BairroResidencial__c.field-meta.xml
<CustomField>
    <fullName>BairroResidencial__c</fullName>
    <label>Bairro Residencial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>