workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CartaoCredito__c.field-meta.xml
<CustomField>
    <fullName>CartaoCredito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cartão de crédito</label>
    <referenceTo>CartaoCredito__c</referenceTo>
    <relationshipLabel>Segurados do contrato</relationshipLabel>
    <relationshipName>SeguradosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>