workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CEPComercial__c.field-meta.xml
<CustomField>
    <fullName>CEPComercial__c</fullName>
    <label>CEP Comercial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>