workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CicloVacinal__c.field-meta.xml
<CustomField>
    <fullName>CicloVacinal__c</fullName>
    <label>Desconto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Sem desconto</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Desconto 5%</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Desconto 10%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Desconto 20%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>