workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CidadeComercial__c.field-meta.xml
<CustomField>
    <fullName>CidadeComercial__c</fullName>
    <label>Cidade Comercial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>