workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CidadeResidencial__c.field-meta.xml
<CustomField>
    <fullName>CidadeResidencial__c</fullName>
    <label>Cidade Residencial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>