workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segurados do contrato (Conta)</relationshipLabel>
    <relationshipName>SeguradoContrato</relationshipName>
    <type>Lookup</type>
</CustomField>