workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/CpfResponsavel__c.field-meta.xml
<CustomField>
    <fullName>CpfResponsavel__c</fullName>
    <label>CPF responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>