workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/DataExpedicaoDocumentoIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>DataExpedicaoDocumentoIdentificacao__c</fullName>
    <label>Data Expedição Documento Identificacao</label>
    <type>Date</type>
</CustomField>