workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/DescontoAgravoMonetarioParcelamento__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioParcelamento__c</fullName>
    <label>Desconto agravo monetário parcelamento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>