workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/DescontoAgravoPercentualFormaPagto__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualFormaPagto__c</fullName>
    <label>Desconto agravo percentual forma pagto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>