workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/DocumentoIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>DocumentoIdentificacao__c</fullName>
    <label>Documento identificação</label>
    <length>25</length>
    <type>Text</type>
</CustomField>