workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>70</length>
    <type>Text</type>
</CustomField>