workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EmailResponsavel__c.field-meta.xml
<CustomField>
    <fullName>EmailResponsavel__c</fullName>
    <label>Email Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>