workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EnderecoComercial__c.field-meta.xml
<CustomField>
    <fullName>EnderecoComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço comercial</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados do contrato</relationshipLabel>
    <relationshipName>Segurados_do_contrato</relationshipName>
    <type>Lookup</type>
</CustomField>