workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EnderecoRecado__c.field-meta.xml
<CustomField>
    <fullName>EnderecoRecado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço de recado</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados do contrato (Endereço de recado)</relationshipLabel>
    <relationshipName>Segurados_do_contrato3</relationshipName>
    <type>Lookup</type>
</CustomField>