workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EnderecoResidencial__c.field-meta.xml
<CustomField>
    <fullName>EnderecoResidencial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço residencial</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados do contrato (Endereço residencial)</relationshipLabel>
    <relationshipName>Segurados_do_contrato1</relationshipName>
    <type>Lookup</type>
</CustomField>