workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EnderecoVeraneio__c.field-meta.xml
<CustomField>
    <fullName>EnderecoVeraneio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço veraneio</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados do contrato (Endereço veraneio)</relationshipLabel>
    <relationshipName>Segurados_do_contrato2</relationshipName>
    <type>Lookup</type>
</CustomField>