workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <label>Estado Civil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>