workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/FaixaRenda__c.field-meta.xml
<CustomField>
    <fullName>FaixaRenda__c</fullName>
    <label>Faixa de Renda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2500</fullName>
                <label>Até R$ 2.500,00</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>R$ 2.500,01 a R$ 4.000,00</label>
            </value>
            <value>
                <fullName>8000</fullName>
                <label>R$ 4.000,01 a R$ 8.000,00</label>
            </value>
            <value>
                <fullName>12000</fullName>
                <label>R$ 8.000,01 a R$ 12.000,00</label>
            </value>
            <value>
                <fullName>16000</fullName>
                <label>R$ 12.000,01 a R$ 16.000,00</label>
            </value>
            <value>
                <fullName>20000</fullName>
                <label>R$ 16.000,01 a R$ 20.000,00</label>
            </value>
            <value>
                <fullName>30000</fullName>
                <label>R$ 20.000,01 a R$ 30.000,00</label>
            </value>
            <value>
                <fullName>30001</fullName>
                <label>Acima de R$ 30.000,00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>