workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/GrupoContrato__c.field-meta.xml
<CustomField>
    <fullName>GrupoContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo do contrato</label>
    <referenceTo>GrupoContrato__c</referenceTo>
    <relationshipLabel>Segurados do contrato</relationshipLabel>
    <relationshipName>SeguradosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>