workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/GrupoRisco__c.field-meta.xml
<CustomField>
    <fullName>GrupoRisco__c</fullName>
    <label>Grupo de Risco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>