workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/InformacaoBancaria__c.field-meta.xml
<CustomField>
    <fullName>InformacaoBancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informação bancária</label>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Segurados do contrato</relationshipLabel>
    <relationshipName>SeguradosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>