workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/LogradouroComercial__c.field-meta.xml
<CustomField>
    <fullName>LogradouroComercial__c</fullName>
    <label>Logradouro Comercial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>