workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/logradouroResidencial__c.field-meta.xml
<CustomField>
    <fullName>logradouroResidencial__c</fullName>
    <label>Logradouro Residencial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>