workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/melhorPeriodo__c.field-meta.xml
<CustomField>
    <fullName>melhorPeriodo__c</fullName>
    <label>Melhor período para contato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>