workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidade__c</fullName>
    <label>Nacionalidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>