workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Nomenclatura_Pesquisa_Segurado_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Nomenclatura_Pesquisa_Segurado_Contrato__c</fullName>
    <externalId>true</externalId>
    <label>Nome-CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>