workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/NomeResponsavel__c.field-meta.xml
<CustomField>
    <fullName>NomeResponsavel__c</fullName>
    <label>Nome responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>