workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/NomeSegurado__c.field-meta.xml
<CustomField>
    <fullName>NomeSegurado__c</fullName>
    <label>Nome do segurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>