workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/NomeSocial_do_Segurado__c.field-meta.xml
<CustomField>
    <fullName>NomeSocial_do_Segurado__c</fullName>
    <description>Designação pela qual a pessoa travesti ou transexual se identifica e é socialmente reconhecida</description>
    <inlineHelpText>O nome social será sua identificação em todos os documentos e contratos emitidos pela Porto, incluindo propostas, apólices e certificados</inlineHelpText>
    <label>Nome Social do Segurado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>