workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/numeroCnpj__c.field-meta.xml
<CustomField>
    <fullName>numeroCnpj__c</fullName>
    <label>Número CNPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>