workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrato__c</fullName>
    <label>NumeroContrato</label>
    <length>18</length>
    <type>Text</type>
</CustomField>