workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/orgaoExpedidorDocumento__c.field-meta.xml
<CustomField>
    <fullName>orgaoExpedidorDocumento__c</fullName>
    <label>Orgao Expedidor Documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>