workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/PaisComercial__c.field-meta.xml
<CustomField>
    <fullName>PaisComercial__c</fullName>
    <label>País Comercial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>