workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <label>PEP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>RelacionamentoProximo</fullName>
                <label>Relacionamento Próximo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>