workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/PorcentagemParticipacaoSegurado__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemParticipacaoSegurado__c</fullName>
    <label>Porcentagem de participação do Segurado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>