workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/PremioTotal__c.field-meta.xml
<CustomField>
    <fullName>PremioTotal__c</fullName>
    <label>Prêmio total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>