workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profissão</label>
    <referenceTo>Profissao__c</referenceTo>
    <relationshipLabel>Segurados do contrato</relationshipLabel>
    <relationshipName>Segurados_do_contrato</relationshipName>
    <type>Lookup</type>
</CustomField>