workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Pronome_Pessoal__c.field-meta.xml
<CustomField>
    <fullName>Pronome_Pessoal__c</fullName>
    <description>Designação de tratamento para a pessoa</description>
    <label>Pronome Pessoal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>ELE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>