workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/RegimeTrabalho__c.field-meta.xml
<CustomField>
    <fullName>RegimeTrabalho__c</fullName>
    <label>Regime de Trabalho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>PROFISSIONAL_LIBERAL</fullName>
                <label>Profissional Liberal | Autônomo</label>
            </value>
            <value>
                <fullName>FUNCIONARIO_PUBLICO</fullName>
                <label>Funcionário Publico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>