workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/RendaMensal__c.field-meta.xml
<CustomField>
    <fullName>RendaMensal__c</fullName>
    <label>Renda mensal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>