workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/ResponsavelPagamento__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo pagamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segurados do contrato (Responsável pelo pagamento)</relationshipLabel>
    <relationshipName>SeguradosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>