workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/TelefoneComercial__c.field-meta.xml
<CustomField>
    <fullName>TelefoneComercial__c</fullName>
    <label>Telefone Comercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>