workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/TelefoneContatoEmergencia__c.field-meta.xml
<CustomField>
    <fullName>TelefoneContatoEmergencia__c</fullName>
    <label>Telefone do contato de emergência</label>
    <type>Phone</type>
</CustomField>