workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/TelefoneResidencial__c.field-meta.xml
<CustomField>
    <fullName>TelefoneResidencial__c</fullName>
    <label>Telefone Residencial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>