workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/TipoDocIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>TipoDocIdentificacao__c</fullName>
    <label>Tipo Documento Identificação</label>
    <length>50</length>
    <type>Text</type>
</CustomField>