workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/UltimaConsultaPEP__c.field-meta.xml
<CustomField>
    <fullName>UltimaConsultaPEP__c</fullName>
    <label>Última Consulta</label>
    <type>Date</type>
</CustomField>