workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/VIgencia_Final__c.field-meta.xml
<CustomField>
    <fullName>VIgencia_Final__c</fullName>
    <label>VIgência Final</label>
    <type>Date</type>
</CustomField>