workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/Vigencia_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Inicial__c</fullName>
    <label>Vigência Inicial</label>
    <type>Date</type>
</CustomField>