workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/VIgenciaFinal__c.field-meta.xml
<CustomField>
    <fullName>VIgenciaFinal__c</fullName>
    <label>VIgência final</label>
    <type>Date</type>
</CustomField>