workspace-sf/force-app/main/default/objects/SeguradoContrato__c/fields/vinculoComSegurado__c.field-meta.xml
<CustomField>
    <fullName>vinculoComSegurado__c</fullName>
    <label>Vinculo com o segurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>