workspace-sf/force-app/main/default/objects/SeguradoContrato__c/validationRules/BloquearPreenchimentoSePEP_RP.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearPreenchimentoSePEP_RP</fullName>
    <active>true</active>
    <description>Os campos tipo de pessoa, nome de pessoa e CPF de pessoa de relacionamento próximo são obrigatórios apenas se informado Relacionamento Próximo na pergunta PEP.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PEP__c,&quot;RelacionamentoProximo&quot;),
    OR(
        ISPICKVAL(TipoPessoaRelacionamentoProximo__c, &quot;&quot;), 
        ISBLANK(NomePessoaRelacionamentoProximo__c), 
        ISBLANK(CpfPessoaRelacionamentoProximo__c)
    )
)</errorConditionFormula>
    <errorMessage>Você escolheu a opção &quot;Relacionamento Próximo&quot; no campo &quot;PEP&quot;. Favor preencher os campos &quot;Tipo de pessoa de relacionamento próximo&quot;, &quot;Nome da pessoa de relacionamento próximo&quot; e &quot;CPF da pessoa de relacionamento próximo&quot;.</errorMessage>
</ValidationRule>